// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Forgot Password with registered email 1`] = `
Object {
  "message": "Email Verification request submitted successfully",
}
`;

exports[`forgot password email required validation 1`] = `
Object {
  "feedback": Object {
    "email": Array [
      "expected string email",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`forgot password invalid email validation 1`] = `
Object {
  "feedback": Object {
    "email": Array [
      "expected string email",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`forgot password invalid email validation 2`] = `
Object {
  "feedback": Object {
    "email": Array [
      "A valid email is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`forgot password invalid email validation 3`] = `
Object {
  "feedback": Object {
    "email": Array [
      "A valid email is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`forgot password unregistered email 1`] = `
Object {
  "message": "Email Verification request submitted successfully",
}
`;
